Fix filter buttons text and icon alignment

--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ button.search-button {
 .filter-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 36px;
+    gap: 35px;
     font-size: 1.0625rem;
 }
 
@@ -139,7 +139,7 @@ button.search-button {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    gap: 10px;
+    gap: 9px;
     padding-left: 20px;
     padding-right: 20px;
     border-radius: 25px;
@@ -151,11 +151,20 @@ button.search-button {
     background-color: #DEEBFF;
 }
 
+.filter-icon-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 24px;
+    height: 100%;
+}
+
 .filter-container i {
     color: #0065FC;
 }
 
 .filter-container span {
+    text-align: start;
     font-weight: 700;
     font-size: 1.0625rem;
 }
